Results meter alignment fixed

--- a/SAT/custom.css
+++ b/SAT/custom.css
@@ -195,3 +195,7 @@ div.x-mask {
 .status-meter-100{
     background: url("resources/images/meter.png") no-repeat 0px -292px;
 }
+
+.top-div {
+    white-space: normal;
+}
